<resources>
    <string name="app_name">Fund.Giftsappconcept</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login_with_twitch">Twitch login</string>
    <string name="fund_gifts">Fund Gifts</string>
    <string name="title_funds">Funds</string>
    <string name="title_home">Home</string>
    <string name="title_friends">Friends</string>
    <string name="new_fund">New Fund</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="title">Title</string>
    <string name="title_new_fund">New Fund</string>
    <string name="title_fund">Fund</string>
    <string name="fund">Fund test</string>
    <string name="app_name2">authpage</string>
    <string name="login_2">Other login</string>
    <string name="cash_amount">Cash Amount</string>
    <string name="login_3">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="funds_gathered">Funds Gathered</string>
    <string name="delete">Delete Fund</string>
    <string name="dismiss">Dismiss</string>
    <string name="undo">Undo</string>
    <string name="successDelete">Deleted</string>
    <string name="logout">Logout</string>
    <string name="email">@Mailadres</string>
    <string name="name">Username</string>
    <string name="age">Age</string>
    <string name="create">Create Account</string>
    <string name="delete_account">Delete Account</string>
</resources>